fix align content

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -1,10 +1,10 @@
+main {
+    margin: 0 .5em;
+}
 .bold {
     font-weight: bold;
 }
 
-.container{
-    margin: 0 6% !important;
-}
 .btn {
     display: flex !important;
     justify-content: center !important;
@@ -47,7 +47,6 @@
     font-size: 1.7rem !important;
     margin-bottom: .5rem !important;
     line-height: 1.2 !important;
-    margin: 0 6% !important;
 }
 
 .subtitle {
@@ -67,7 +66,7 @@
 }
 
 .description {
-    margin: .75rem 6%;
+    margin: .75rem 0;
     color: #707070;
     font-size: 1.25rem;
     font-weight: 400;
@@ -194,7 +193,6 @@
     color: #707070;
     font-weight: 500;
     font-size: 1rem;
-    margin: 0 6%;
 }
 
 
